completed contact page. fixed footer spacing issues on all pages.

--- a/style.css
+++ b/style.css
@@ -2,6 +2,13 @@
 
 html, body {
     height: 100%;
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+}
+
+main {
+    flex-grow: 1;
 }
 
 .nav-links{
